[package]
name = "immutable_string"
version = "0.1.0"
authors = ["Marcos Sartori <marcos.sartori@acad.pucrs.br>"]
edition = "2018"
description = "Immutable Single Instance Strings for Rust"
repository = "https://github.com/marlls1989/immutable_string/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weak-table = "^0.3.0"
lazy_static = "^1.4.0"
